# digital-brain

./: AGENTS.md  COLLABORATORS.md  Cargo.toml  README.md  test_file_1769892611.txt
.github/workflows/: ci.yml
benches/: agent_bench.rs
docs/: AGENT_INTEGRATION_ROADMAP.md  ARCHITECTURE.md  HUMAN_COGNITION_ROADMAP.md  MODULES.md  ONBOARDING.md  REGION_MAP.md  RESEARCH.md
examples/: autonomous_agent.rs  brain_repl.rs  consciousness_demo.rs  full_agent_demo.rs  interconnect_demo.rs  live_interconnect.rs  memory_demo.rs  nervous_system_demo.rs  onboard_agent.rs  semantic_search_demo.rs
interfaces/: signal.py
regions/hippocampus/: __init__.py  memory_store.py
src/: brain.rs  error.rs  lib.rs  signal.rs
src/agent/: agent_loop.rs  brain_agent.rs  communication.rs  mod.rs  multi_agent.rs
src/core/: action.rs  attention.rs  boredom.rs  cognition.rs  consciousness.rs  curiosity.rs  emotion.rs  goals.rs  imagination.rs  inner_speech.rs  mod.rs  nervous_system.rs  neuromodulators.rs  planning.rs  prediction.rs  salience.rs  scheduler.rs  self_model.rs  sensory.rs  sleep.rs  social.rs  stimulus.rs  strategy.rs  temporal.rs  workspace.rs  world_model.rs
src/core/llm/: anthropic.rs  mod.rs  traits.rs
src/onboarding/: config.rs  mod.rs  prompts.rs  wizard.rs
src/regions/: acc.rs  amygdala.rs  basal_ganglia.rs  brainstem.rs  broca.rs  cerebellum.rs  dmn.rs  hippocampus.rs  hypothalamus.rs  insula.rs  language_cortex.rs  mirror_neurons.rs  mod.rs  motor_cortex.rs  parietal_cortex.rs  posterior_parietal.rs  prefrontal.rs  schema.rs  sensory_cortex.rs  stn.rs  temporal_cortex.rs  thalamus.rs
tests/: agent_integration.rs  brain_integration.rs  integration_tests.rs
